--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,37 @@
 /*  your css code here. If applicable */
+body {
+            background-color: #f5f5f5;
+            margin: 0;
+            font-family: Arial, sans-serif;
+        }
+        .header {
+            background-color: #011e29;
+            text-align: center;
+            padding: 20px;
+            color: white;
+        }
+        .latest-news-section {
+            background-color: #f5f5f5;
+            padding: 20px;
+            width: 80%;
+            margin: 20px auto;
+        }
+        .latest-news-section ul {
+            padding: 0;
+            list-style-type: none;
+        }
+        .latest-news-section li {
+            padding: 10px 0;
+        }
+        .pictorial-news-section {
+            background-color: #ffffff;
+            padding: 20px;
+            width: 80%;
+            margin: 20px auto;
+            text-align: center;
+            border-radius: 8px;
+        }
+        .pictorial-news-section img {
+            width: 30%;
+            margin: 10px;
+        }
